grid search on total dataset

--- a/milestone_4.ipynb
+++ b/milestone_4.ipynb
@@ -328,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before continuing we quickly check the diferent data types for each column that we have in our main dataframe."
+    "Before continuing we check the different data types for each column that we have in our main dataframe."
    ]
   },
   {
@@ -496,9 +496,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also want to drop all races that are not white, hispanic, or black\n",
-    "Also all sexes that are not male or female (I did not notice any, but this is just a precaution)\n",
-    "This is for simplification purposes, and also to fit the study results as well as possible "
+    "We also want to drop all races that are not white, hispanic, or black and all sexes that are not male or female (we didn't notice any, but this is just a precaution)\n",
+    "All these reductions are for simplification purposes, and also to fit the study results as well as possible "
    ]
   },
   {
@@ -695,7 +694,7 @@
     "\n",
     "We could have used a random forest analysis for better precision, but we found the decision tree analysis to be more convenient. The main reason is that decision trees are easy to represent, and are white box models, whereas random forests are more accurate but they are black box models, harder to represent, and impossible to run by hand.\n",
     "\n",
-    "We will use sklearn to do this\n",
+    "Sklearn offers the tools we need for these computations so we will use this library.\n",
     "\n",
     "The first thing we will need to do is to split our data into a training and testing set.\n",
     "\n",
@@ -960,53 +959,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we have to define our decision trees and their parameters. Most of these parameters (min_samples_leaf, min_samples_split) are not really important based on the number of samples. However, the ones that will really be important for our model are the max_tree_depth, criterion and splitter. Max_tree_depth is especially important because it will ultimately be this parameter that determines which factors are important to evaluate if a subject will be searched, we thus need to evaluate the optimal tree depth.\n",
     "\n",
-    "Now we will define our decision trees.\n",
+    "First, we will evaluate the whole dataset to calculate the precisions and to comment our methods. We will do so by using a tree with only 3 levels. Afterwards we will perform the same fit, but with other methods in order to ensure that our results are coherent.\n",
     "\n",
-    "Most parameters (min_samples_leaf, min_samples_split) are not really important based on the number of samples\n",
+    "Our trees will be evaluated on accuracy, precision (fraction of our predicted positives that are true positives) and recall (fraction of all actual positives that are true positives).\n",
     "\n",
-    "However, the ones that will really be important for our model are the max_tree_depth, criterion and splitter \n",
-    "\n",
-    "max_tree_depth is especially important because it will ultimately be this parameter that determines which factors are important to evaluate if a subject will be searched"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we will evaluate the tree with only 3 levels.\n",
-    "\n",
-    "We will perform the same fit, but with other methods in order to ensure that our results are coherent.\n",
-    "\n",
-    "We will evaluate them based on accuracy, precision (fraction of our predicted positives that are true positives) and recall (fraction of all actual positives that are true positives).\n",
-    "\n",
-    "Just as another check, we will calculate these indicators on the training set. This is only to ensure that nothing went wrong, since during testing I ended up with an accuracy of 0 on the training set, which indicated an error in my code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We are going to use the first time interval as an example and to comment our method."
+    "We will also, as a supplementary check, calculate these indicators on the training set. This is only to ensure that nothing went wrong, since we have some issues in our inital test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         year  subject_age  subject_race  subject_sex  search_conducted\n",
+      "1225753  2009         31.0             2            0                 0\n",
+      "1173623  2009         18.0             2            1                 0\n",
+      "1173621  2009         31.0             2            1                 0\n",
+      "1184276  2009         18.0             1            1                 0\n",
+      "1166845  2009         18.0             1            0                 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "wa_reduced= label_encoding(wa_reduced)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train= wa_sets[0][0]\n",
-    "X_test= wa_sets[0][1]\n",
-    "Y_train= wa_sets[0][2]\n",
-    "Y_test= wa_sets[0][3]\n",
-    "X_val= wa_sets[0][4]\n",
-    "Y_val= wa_sets[0][5]"
+    "wa_tot=split(wa_reduced)\n",
+    "X_train= wa_tot[0]\n",
+    "X_test= wa_tot[1]\n",
+    "Y_train= wa_tot[2]\n",
+    "Y_test= wa_tot[3]\n",
+    "X_val= wa_tot[4]\n",
+    "Y_val= wa_tot[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1016,7 @@
        "DecisionTreeClassifier(max_depth=3)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,15 +1029,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training set: 0.967\n",
-      "Precision on training set: 0.483\n",
+      "Accuracy on training set: 0.970\n",
+      "Precision on training set: 0.485\n",
       "Recall on training set: 0.500\n"
      ]
     }
@@ -1049,15 +1050,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on testing set: 0.967\n",
-      "Precision on testing set: 0.483\n",
+      "Accuracy on testing set: 0.971\n",
+      "Precision on testing set: 0.485\n",
       "Recall on testing set: 0.500\n"
      ]
     }
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1080,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,16 +1092,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training set: 0.967\n",
-      "Precision on training set: 0.483\n",
-      "Recall on training set: 0.500\n"
+      "Accuracy on training set: 0.970\n",
+      "Precision on training set: 0.485\n"
      ]
     }
    ],
@@ -1112,19 +1112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on testing set: 0.967\n",
-      "Precision on testing set: 0.483\n",
-      "Recall on testing set: 0.500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree_example.score(X_test,Y_test)))\n",
     "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree_example.predict(X_test), average = 'macro')))\n",
@@ -1133,20 +1123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SGDClassifier()"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "WA_tree_example = SGDClassifier(loss='hinge',penalty='l2',max_iter=1000)\n",
     "WA_tree_example.fit(X_train,Y_train)"
@@ -1154,19 +1133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on training set: 0.967\n",
-      "Precision on training set: 0.483\n",
-      "Recall on training set: 0.500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Accuracy on training set: {:.3f}\".format(WA_tree_example.score(X_train,Y_train)))\n",
     "print(\"Precision on training set: {:.3f}\".format(precision_score(Y_train,WA_tree_example.predict(X_train), average = 'macro')))\n",
@@ -1175,19 +1144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on testing set: 0.967\n",
-      "Precision on testing set: 0.483\n",
-      "Recall on testing set: 0.500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree_example.score(X_test,Y_test)))\n",
     "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree_example.predict(X_test), average = 'macro')))\n",
@@ -1199,13 +1158,6 @@
    "metadata": {},
    "source": [
     "The values for the respective indicators are extremely consistent on both the training and testing set, and no matter the model we used. Therefore, we can conclude that a decision tree analysis is appropriate. Precision and recall are not optimal, but considering the small proportion of positives in the population they are actually sufficient. Moreover, what this tells us is that there is still a huge human factor in searches which we cannnot take into account in our estimations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will now plot the three trees and make our first observations"
    ]
   },
   {
@@ -1229,23 +1181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(estimator=DecisionTreeClassifier(),\n",
-       "             param_grid={'criterion': ('gini', 'entropy'), 'max_depth': [1, 10],\n",
-       "                         'splitter': ('best', 'random')},\n",
-       "             scoring='precision')"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "WA_tree = DecisionTreeClassifier()\n",
     "parameters = {'criterion' : ('gini','entropy'), 'splitter' : ('best','random'), 'max_depth'  : [1,10]}\n",
@@ -1255,28 +1193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best criterion: gini\n",
-      "Best splitter: best\n",
-      "{'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 1, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'presort': 'deprecated', 'random_state': None, 'splitter': 'best'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Best criterion:', GS_WA.best_estimator_.get_params()['criterion'])\n",
     "print('Best splitter:',  GS_WA.best_estimator_.get_params()['splitter'])\n",
+    "print('Best max_depth:', GS_WA.best_estimator_.get_params()['max_depth'])\n",
     "print(GS_WA.best_estimator_.get_params(['WA_tree']))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,19 +1214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on training set: 0.967\n",
-      "Precision on training set: 0.483\n",
-      "Recall on training set: 0.500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Accuracy on training set: {:.3f}\".format(WA_tree.score(X_train,Y_train)))\n",
     "print(\"Precision on training set: {:.3f}\".format(precision_score(Y_train,WA_tree.predict(X_train), average = 'macro')))\n",
@@ -1306,23 +1225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on testing set: 0.967\n",
-      "Precision on testing set: 0.483\n",
-      "Recall on testing set: 0.500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree.score(X_test,Y_test)))\n",
     "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree.predict(X_test), average = 'macro')))\n",
     "print(\"Recall on testing set: {:.3f}\".format(recall_score(Y_test,WA_tree.predict(X_test), average = 'macro')))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Step 4**:  Visualization\n",
+    "We now want to visualize the results of our analysis"
    ]
   },
   {
@@ -1337,14 +1254,6 @@
     "    new_tree.set_params(max_depth = 3)\n",
     "    new_tree.fit(sets[0],sets[2])\n",
     "    trees.append(new_tree)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Step 4**:  Visualization\n",
-    "We now want to visualize the results of our analysis"
    ]
   },
   {
