--- a/milestone_4.ipynb
+++ b/milestone_4.ipynb
@@ -1007,29 +1007,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(max_depth=3)"
+       "DecisionTreeClassifier(max_depth=1)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "WA_tree_example = DecisionTreeClassifier()\n",
-    "WA_tree_example.set_params(max_depth = 3)\n",
+    "WA_tree_example.set_params(max_depth = 1)\n",
     "WA_tree_example.fit(X_train,Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy on training set: 0.970\n",
-      "Precision on training set: 0.485\n"
+      "Precision on training set: 0.485\n",
+      "Recall on training set: 0.500\n"
      ]
     }
    ],
@@ -1112,9 +1113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on testing set: 0.971\n",
+      "Precision on testing set: 0.485\n",
+      "Recall on testing set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree_example.score(X_test,Y_test)))\n",
     "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree_example.predict(X_test), average = 'macro')))\n",
@@ -1123,9 +1134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier()"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "WA_tree_example = SGDClassifier(loss='hinge',penalty='l2',max_iter=1000)\n",
     "WA_tree_example.fit(X_train,Y_train)"
@@ -1133,9 +1155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on training set: 0.970\n",
+      "Precision on training set: 0.485\n",
+      "Recall on training set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy on training set: {:.3f}\".format(WA_tree_example.score(X_train,Y_train)))\n",
     "print(\"Precision on training set: {:.3f}\".format(precision_score(Y_train,WA_tree_example.predict(X_train), average = 'macro')))\n",
@@ -1144,9 +1176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on testing set: 0.971\n",
+      "Precision on testing set: 0.485\n",
+      "Recall on testing set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree_example.score(X_test,Y_test)))\n",
     "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree_example.predict(X_test), average = 'macro')))\n",
@@ -1181,9 +1223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(estimator=DecisionTreeClassifier(),\n",
+       "             param_grid={'criterion': ('gini', 'entropy'), 'max_depth': [1, 10],\n",
+       "                         'splitter': ('best', 'random')},\n",
+       "             scoring='precision')"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "WA_tree = DecisionTreeClassifier()\n",
     "parameters = {'criterion' : ('gini','entropy'), 'splitter' : ('best','random'), 'max_depth'  : [1,10]}\n",
@@ -1193,19 +1249,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best criterion: gini\n",
+      "Best splitter: best\n",
+      "Best max_depth: 1\n",
+      "{'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 1, 'max_features': None, 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'presort': 'deprecated', 'random_state': None, 'splitter': 'best'}\n"
+     ]
+    }
+   ],
    "source": [
     "print('Best criterion:', GS_WA.best_estimator_.get_params()['criterion'])\n",
     "print('Best splitter:',  GS_WA.best_estimator_.get_params()['splitter'])\n",
     "print('Best max_depth:', GS_WA.best_estimator_.get_params()['max_depth'])\n",
-    "print(GS_WA.best_estimator_.get_params(['WA_tree']))\n"
+    "print(GS_WA.best_estimator_.get_params(['WA_tree']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,9 +1281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on training set: 0.970\n",
+      "Precision on training set: 0.485\n",
+      "Recall on training set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy on training set: {:.3f}\".format(WA_tree.score(X_train,Y_train)))\n",
     "print(\"Precision on training set: {:.3f}\".format(precision_score(Y_train,WA_tree.predict(X_train), average = 'macro')))\n",
@@ -1225,9 +1302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on testing set: 0.971\n",
+      "Precision on testing set: 0.485\n",
+      "Recall on testing set: 0.500\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy on testing set: {:.3f}\".format(WA_tree.score(X_test,Y_test)))\n",
     "print(\"Precision on testing set: {:.3f}\".format(precision_score(Y_test,WA_tree.predict(X_test), average = 'macro')))\n",
@@ -1347,6 +1434,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Step 5**:  Comparison "
+   ]
   },
   {
    "cell_type": "code",
