--- a/milestone_4.ipynb
+++ b/milestone_4.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "source": [
     "### **Step 1**:  Source of Data\n",
-    "The original paper gives a link to the source of their data the Stanford Open Policing project :https://openpolicing.stanford.edu/data/. Sevrall million of stops are categorized there but as we said we decided to limit ourselves to only one state, which we thought needed to be heavily populated and where state patrols had recorded  a lot of stops owith information on the racial appearence of the subjects, the time of the stop, the subject age, the subjet sex and if a search had been conducted. Our choice was therefore the state of washington and the 11 million state patrol stopps.\n",
+    "The original paper gives a link to the source of their data the Stanford Open Policing project : https://openpolicing.stanford.edu/data/. Sevrall million of stops are categorized there but as we said we decided to limit ourselves to only one state, which we thought needed to be heavily populated and where state patrols had recorded  a lot of stops owith information on the racial appearence of the subjects, the time of the stop, the subject age, the subjet sex and if a search had been conducted. Our choice was therefore the state of washington and the 11 million state patrol stopps.\n",
     "\n",
     "But this also meant that the file containing all these stops was really large and the computation time being so long we had to take only parts of the original csv.  To achieve this, as the data is sorted by date, we sampled the orignal dataset randomly and took a about 500 000. That is aproximately 4,5% . \n",
     "\n",
@@ -90,7 +90,7 @@
     "    s = 500000 #desired sample size, longer sample sizes will significantly increase runtime\n",
     "    skip = sorted(random.sample(range(1,n+1),n-s)) #the 0-indexed header will not be included in the skip list\n",
     "\n",
-    "    wa = pd.read_csv(filename, skiprows=skip) #uncomment this line and comment the following line for only importing s samples\n",
+    "    wa = pd.read_csv(filename, skiprows=skip)\n",
     "    \n",
     "elif computer == 'Jean':\n",
     "    filename = \"/Users/jeandevillard/Desktop/m_3/wa.csv\" #path on Jean computer\n",
@@ -1439,7 +1439,340 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Step 5**:  Comparison "
+    "### **Step 5**:  Comparison with the state of colorado "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if computer == 'Nathan':\n",
+    "    filename = \"data/co_statewide_2020_04_01.csv\" #where your data should be :)\n",
+    "    co = pd.read_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>raw_row_number</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>location</th>\n",
+       "      <th>county_name</th>\n",
+       "      <th>subject_age</th>\n",
+       "      <th>subject_race</th>\n",
+       "      <th>subject_sex</th>\n",
+       "      <th>officer_id_hash</th>\n",
+       "      <th>officer_sex</th>\n",
+       "      <th>type</th>\n",
+       "      <th>violation</th>\n",
+       "      <th>arrest_made</th>\n",
+       "      <th>citation_issued</th>\n",
+       "      <th>warning_issued</th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>contraband_found</th>\n",
+       "      <th>search_conducted</th>\n",
+       "      <th>search_basis</th>\n",
+       "      <th>raw_Ethnicity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1947986|1947987</td>\n",
+       "      <td>2013-06-19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19, I70, 8</td>\n",
+       "      <td>Mesa County</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>male</td>\n",
+       "      <td>b942632983</td>\n",
+       "      <td>male</td>\n",
+       "      <td>vehicular</td>\n",
+       "      <td>Driver's Vision Obstructed Through Required Gl...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>citation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1537576</td>\n",
+       "      <td>2012-08-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>254, H285, 11</td>\n",
+       "      <td>Jefferson County</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f3d4f46927</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vehicular</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1581594</td>\n",
+       "      <td>2012-09-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>115, I76, 13</td>\n",
+       "      <td>Logan County</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>male</td>\n",
+       "      <td>6e49e2fbc8</td>\n",
+       "      <td>male</td>\n",
+       "      <td>vehicular</td>\n",
+       "      <td>Speeding (10-19 MPH Over the Maximum 75 MPH Li...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>warning</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1009205</td>\n",
+       "      <td>2011-08-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>197, H85, 47</td>\n",
+       "      <td>Douglas County</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>white</td>\n",
+       "      <td>female</td>\n",
+       "      <td>eaea851669</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>vehicular</td>\n",
+       "      <td>Speeding (10-19 MPH Over Prima Facie Limit *)</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>citation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1932619</td>\n",
+       "      <td>2013-06-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>107, H287, 45</td>\n",
+       "      <td>Kiowa County</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>male</td>\n",
+       "      <td>d18e34d749</td>\n",
+       "      <td>male</td>\n",
+       "      <td>vehicular</td>\n",
+       "      <td>Failed to Drive in Single Lane (Weaving)</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>warning</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    raw_row_number        date  time       location       county_name  \\\n",
+       "0  1947986|1947987  2013-06-19   NaN     19, I70, 8       Mesa County   \n",
+       "1          1537576  2012-08-24   NaN  254, H285, 11  Jefferson County   \n",
+       "2          1581594  2012-09-23   NaN   115, I76, 13      Logan County   \n",
+       "3          1009205  2011-08-25   NaN   197, H85, 47    Douglas County   \n",
+       "4          1932619  2013-06-08   NaN  107, H287, 45      Kiowa County   \n",
+       "\n",
+       "   subject_age subject_race subject_sex officer_id_hash officer_sex  \\\n",
+       "0         26.0     hispanic        male      b942632983        male   \n",
+       "1          NaN          NaN         NaN      f3d4f46927         NaN   \n",
+       "2         52.0        white        male      6e49e2fbc8        male   \n",
+       "3         32.0        white      female      eaea851669         NaN   \n",
+       "4         33.0     hispanic        male      d18e34d749        male   \n",
+       "\n",
+       "        type                                          violation arrest_made  \\\n",
+       "0  vehicular  Driver's Vision Obstructed Through Required Gl...       False   \n",
+       "1  vehicular                                                NaN       False   \n",
+       "2  vehicular  Speeding (10-19 MPH Over the Maximum 75 MPH Li...       False   \n",
+       "3  vehicular      Speeding (10-19 MPH Over Prima Facie Limit *)       False   \n",
+       "4  vehicular           Failed to Drive in Single Lane (Weaving)       False   \n",
+       "\n",
+       "  citation_issued warning_issued   outcome contraband_found search_conducted  \\\n",
+       "0            True          False  citation              NaN            False   \n",
+       "1           False          False       NaN              NaN            False   \n",
+       "2           False           True   warning              NaN            False   \n",
+       "3            True          False  citation              NaN            False   \n",
+       "4           False           True   warning              NaN            False   \n",
+       "\n",
+       "  search_basis raw_Ethnicity  \n",
+       "0          NaN             H  \n",
+       "1          NaN           NaN  \n",
+       "2          NaN             W  \n",
+       "3          NaN             W  \n",
+       "4          NaN             H  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "co.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Changing the date column:\n",
+    "co_datetime = pd.to_datetime(co.date)\n",
+    "co.date = co_datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We prepare the date in the same way\n",
+    "co_reduced=co.loc[:,['date','subject_age','subject_race','subject_sex','search_conducted']]\n",
+    "co_reduced = co_reduced.dropna()\n",
+    "co_reduced=co_reduced.sort_values(by=['date'])\n",
+    "co_reduced_year=[]\n",
+    "\n",
+    "for date_ in co_reduced.date:\n",
+    "    co_reduced_year.append(date_.year)\n",
+    "co_reduced['year']=co_reduced_year\n",
+    "\n",
+    "co_reduced=co_reduced.loc[:,['year','subject_age','subject_race','subject_sex','search_conducted']]\n",
+    "\n",
+    "co_reduced = co_reduced[co_reduced['subject_race'].isin(['black','hispanic','white'])]\n",
+    "co_reduced = co_reduced[co_reduced['subject_sex'].isin(['male','female'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "co_collection=prep_from_time_intervals(co_reduced,time_intervals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        subject_age  subject_race  subject_sex  search_conducted\n",
+      "93069          16.0             2            1                 0\n",
+      "135266         28.0             2            1                 0\n",
+      "72982          22.0             2            0                 0\n",
+      "72983          33.0             2            1                 0\n",
+      "72984          35.0             2            1                 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "co_collection[0]=label_encoding(co_collection[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        subject_age  subject_race  subject_sex  search_conducted\n",
+      "859648         31.0             1            0                 0\n",
+      "859549         18.0             2            0                 0\n",
+      "859550         49.0             2            1                 1\n",
+      "859494         19.0             2            1                 0\n",
+      "859551         42.0             2            0                 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "co_collection[1]=label_encoding(co_collection[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         subject_age  subject_race  subject_sex  search_conducted\n",
+      "1765510         54.0             2            1                 0\n",
+      "1765532         49.0             2            1                 0\n",
+      "1765531         33.0             2            1                 0\n",
+      "1765219         71.0             2            0                 0\n",
+      "1765479         32.0             2            1                 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "co_collection[2]=label_encoding(co_collection[2])"
    ]
   },
   {
